--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,9 @@ jobs:
 
       - name: Configure Git User
         run: |
-          git config --global user.email "ci@git-cms.local"
-          git config --global user.name "CI Bot"
-          git config --global init.defaultBranch main
+          git config user.email "ci@git-cms.local"
+          git config user.name "CI Bot"
+          git config init.defaultBranch main
 
       - name: Run Local Integration Tests
         run: npm run test:local
@@ -66,9 +66,9 @@ jobs:
       
       - name: Configure Git User
         run: |
-          git config --global user.email "ci@git-cms.local"
-          git config --global user.name "CI Bot"
-          git config --global init.defaultBranch main
+          git config user.email "ci@git-cms.local"
+          git config user.name "CI Bot"
+          git config init.defaultBranch main
 
       - name: Install Dependencies
         run: npm ci
